[gd_scene load_steps=20 format=3 uid="uid://cjcn2acfvx102"]

[ext_resource type="Script" path="res://scenes/game/character/single_roki_roki.gd" id="1_clswm"]
[ext_resource type="Script" path="res://scenes/game/character/single_load_skin.gd" id="1_yubk2"]
[ext_resource type="Script" path="res://scenes/game/character/teleporter.gd" id="2_v421d"]
[ext_resource type="Texture2D" uid="uid://bok5q7sxwnfus" path="res://assets/sprites/character/guidelines/Head.png" id="3_g0kly"]
[ext_resource type="Texture2D" uid="uid://drypq4jdrky7g" path="res://assets/sprites/character/guidelines/3_piece.png" id="4_xytmy"]
[ext_resource type="Script" path="res://scenes/game/modules/single_weapon_collision.gd" id="5_gqp6n"]
[ext_resource type="Texture2D" uid="uid://die5me60kg1r5" path="res://assets/sprites/character/guidelines/4_piece.png" id="6_f51gn"]
[ext_resource type="PackedScene" uid="uid://cfps4j761fr03" path="res://scenes/game/modules/joy_stick.tscn" id="9_h6r3o"]
[ext_resource type="Texture2D" uid="uid://cnhkrdor3gjqg" path="res://assets/sprites/character/guidelines/2_piece.png" id="9_xj2jc"]
[ext_resource type="PackedScene" uid="uid://c2khg3vqn4pur" path="res://scenes/game/modules/single_character.tscn" id="10_0ambm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iffut"]
radius = 137.015

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q67eg"]
radius = 60.0
height = 362.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f5c4q"]
radius = 60.0
height = 348.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vvlio"]
radius = 62.0322

[sub_resource type="CircleShape2D" id="CircleShape2D_viqci"]
radius = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jqnu1"]
radius = 60.0
height = 242.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ry31l"]
radius = 60.0333
height = 461.142

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d2y7e"]
radius = 60.3683
height = 481.231

[sub_resource type="CircleShape2D" id="CircleShape2D_2s4q6"]
radius = 62.0322

[node name="Roki Roki" type="Node2D"]
script = ExtResource("1_clswm")

[node name="Extra" type="Node2D" parent="."]

[node name="Center" type="Marker2D" parent="Extra"]
position = Vector2(0, 305)

[node name="Reach" type="Marker2D" parent="Extra/Center"]
position = Vector2(750, 0)

[node name="HitCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillDuration" type="Timer" parent="Extra"]
one_shot = true

[node name="DoubleJoyStick" parent="Extra" instance=ExtResource("9_h6r3o")]

[node name="InvulnerabilityCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="Character" parent="Extra" instance=ExtResource("10_0ambm")]

[node name="LocalCharacter" type="Node2D" parent="."]
script = ExtResource("1_yubk2")

[node name="Head" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable", "Damager"]]
position = Vector2(0, -120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Head"]
position = Vector2(0, -105)
texture = ExtResource("3_g0kly")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="LocalCharacter/Head"]
position = Vector2(0, -135)
shape = SubResource("CircleShape2D_iffut")

[node name="HB" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB2" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB3" type="PinJoint2D" parent="LocalCharacter/Head"]
node_a = NodePath("..")
node_b = NodePath("../../Body")

[node name="HB4" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB5" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="Body" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
mass = 0.1
center_of_mass_mode = 1
center_of_mass = Vector2(0, -107)
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Body"]
texture = ExtResource("4_xytmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Body"]
shape = SubResource("CapsuleShape2D_q67eg")

[node name="RLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(240, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLA"]
position = Vector2(-0.000427246, -120)
texture = ExtResource("4_xytmy")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA3" type="PinJoint2D" parent="LocalCharacter/RLA"]
rotation = -1.5708
node_a = NodePath("../../RUA")
node_b = NodePath("..")

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLA"]
position = Vector2(-0.000396729, -113)
shape = SubResource("CapsuleShape2D_f5c4q")

[node name="RUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUA"]
position = Vector2(-0.000442505, -120)
texture = ExtResource("4_xytmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUA"]
position = Vector2(-0.000442505, -120)
shape = SubResource("CapsuleShape2D_q67eg")

[node name="BRA" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA3" type="PinJoint2D" parent="LocalCharacter/RUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="RF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RF"]
shape = SubResource("CircleShape2D_vvlio")

[node name="RF" type="PinJoint2D" parent="LocalCharacter/RF"]
node_a = NodePath("../../RLA")
node_b = NodePath("..")
bias = 0.9

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RF"]
script = ExtResource("5_gqp6n")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-240, 0)
rotation = -1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLA"]
position = Vector2(0.000473022, -120)
texture = ExtResource("4_xytmy")

[node name="LLA" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA3" type="PinJoint2D" parent="LocalCharacter/LLA"]
rotation = -1.5708
node_a = NodePath("../../LUA")
node_b = NodePath("..")

[node name="LLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLA"]
position = Vector2(0.000473022, -113)
shape = SubResource("CapsuleShape2D_f5c4q")

[node name="LUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUA"]
position = Vector2(0.000442505, 120)
texture = ExtResource("4_xytmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUA"]
position = Vector2(0.000442505, 120)
shape = SubResource("CapsuleShape2D_q67eg")

[node name="BLA" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA3" type="PinJoint2D" parent="LocalCharacter/LUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="LK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-360, 984)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LK"]
shape = SubResource("CircleShape2D_viqci")

[node name="LK" type="PinJoint2D" parent="LocalCharacter/LK"]
node_a = NodePath("../../LLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LK"]

[node name="Hip" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 240)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Hip"]
position = Vector2(0, 60)
texture = ExtResource("9_xj2jc")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Hip"]
node_a = NodePath("../../Stomach")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Hip"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_jqnu1")

[node name="RLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(180, 672)
rotation = -0.506145
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLL"]
position = Vector2(0, 180)
texture = ExtResource("6_f51gn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_ry31l")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/RLL"]
node_a = NodePath("../../RUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUL"]
position = Vector2(0, 180)
texture = ExtResource("6_f51gn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_d2y7e")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/RUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(355, 987)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RK"]
shape = SubResource("CircleShape2D_viqci")

[node name="RK" type="PinJoint2D" parent="LocalCharacter/RK"]
node_a = NodePath("../../RLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RK"]

[node name="Stomach" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, 60)
texture = ExtResource("9_xj2jc")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Stomach"]
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_jqnu1")

[node name="LLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-180, 672)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLL"]
position = Vector2(0, 180)
texture = ExtResource("6_f51gn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_ry31l")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/LLL"]
node_a = NodePath("../../LUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUL"]
position = Vector2(0, 180)
texture = ExtResource("6_f51gn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_d2y7e")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/LUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_v421d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LF"]
shape = SubResource("CircleShape2D_2s4q6")

[node name="LF" type="PinJoint2D" parent="LocalCharacter/LF"]
node_a = NodePath("../../LLA")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LF"]
script = ExtResource("5_gqp6n")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/LF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../LLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/LF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../LLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/LF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../LLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/LF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../LLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0
